objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Apttus__Contract_Duration_Days__c</fullName>
        <description>The duration from Start Date to End Date in days</description>
        <formula>IF(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;), (Apttus__Contract_End_Date__c &gt;= Apttus__Contract_Start_Date__c)),  (Apttus__Contract_End_Date__c - Apttus__Contract_Start_Date__c) + 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_End_Date__c</fullName>
        <description>The end date for this agreement</description>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_Number__c</fullName>
        <description>The system assigned unique agreement number.  FOR INTERNAL USE ONLY.  DO NOT SHOW IN SCREENS, REPORTS, ETC.</description>
        <displayFormat>{00000000}</displayFormat>
        <label>Agreement Number_Auto (INTERNAL)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_Start_Date__c</fullName>
        <description>The effective date of the agreement</description>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Contracted_Days__c</fullName>
        <description>Days from Contract Start Date to Current Date if the contract is In Effect and Start Date is set.</description>
        <formula>IF(AND(NOT(ISNULL(Apttus__Contract_Start_Date__c )), ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;)), (TODAY() - Apttus__Contract_Start_Date__c ) + 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracted Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Detailed description of this agreement</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ExecutedDate__c</fullName>
        <description>The date when the agreement was executed or signed</description>
        <inlineHelpText>The date when the agreement was executed or signed</inlineHelpText>
        <label>Executed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__Executed_Copy_Mailed_Out_Date__c</fullName>
        <description>Date the final, executed copy was mailed to the other party</description>
        <label>Executed Copy Mailed Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Agreement_Number__c</fullName>
        <description>Identifies the agreement number, including the version number.  Use this field to display on screens, reports, dashboards, search filters and columns, etc.  The other agreement number fields are for internal use only.</description>
        <formula>Apttus__Agreement_Number__c  &amp; &quot;.&quot; &amp;  TEXT(CEILING(Apttus__Version_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Amend__c</fullName>
        <description>Amend the agreement</description>
        <formula>IF (AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__LightningAgreementAmend?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Amend&quot;, &quot;Amend&quot;),&quot;_self&quot;) , HYPERLINK(&quot;/apex/Apttus__AgreementAmend?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Amend&quot;, &quot;Amend&quot;),&quot;_self&quot;)),NULL)</formula>
        <inlineHelpText>Amend the agreement</inlineHelpText>
        <label>Amend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Cancel_Request__c</fullName>
        <description>Cancel the agreement request</description>
        <formula>IF (AND(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;Request&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Filing&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;Cancelled Request&quot;))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__LightningAgreementCancel?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_CancelRequest&quot;, &quot;Cancel Request&quot;), &quot;_self&quot;) , HYPERLINK(&quot;/apex/Apttus__AgreementCancel?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_CancelRequest&quot;, &quot;Cancel Request&quot;), &quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cancel the agreement request</inlineHelpText>
        <label>Cancel Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Execute__c</fullName>
        <description>Activates the agreement</description>
        <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Filing&quot;), AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(Apttus__Source__c,&quot;Other Party Paper&quot;))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;), HYPERLINK(&quot;/apex/Apttus__LightningAgreementActivate?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Activate&quot;, &quot;Activate&quot;),&quot;_self&quot;) , HYPERLINK(&quot;/apex/Apttus__AgreementActivate?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Activate&quot;, &quot;Activate&quot;),&quot;_self&quot;)),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Activates the agreement</inlineHelpText>
        <label>Activate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Expire__c</fullName>
        <description>Expire the agreement</description>
        <formula>IF (AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;))),IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),  HYPERLINK(&quot;/apex/Apttus__LightningAgreementExpire?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Expire&quot;, &quot;Expire&quot;),&quot;_self&quot;) ,  HYPERLINK(&quot;/apex/Apttus__AgreementExpire?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Expire&quot;, &quot;Expire&quot;),&quot;_self&quot;)), NULL)</formula>
        <inlineHelpText>Expire the agreement</inlineHelpText>
        <label>Expire</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Generate_Protected_Agreement__c</fullName>
        <description>Generates a read-only password protected agreement</description>
        <formula>IF (ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;), HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b50000000lgo8&quot;&amp;&quot;&amp;eid=&quot;&amp;Id, &quot;Generate Agreement&quot;,&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Protected (OBSOLETE)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Generate_Supporting_Document__c</fullName>
        <formula>IF (NOT(ISPICKVAL(Apttus__Status_Category__c,&quot;Import&quot;)), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Generate_Supporting_Document&amp;templateType=Supporting_Document&quot;, IMAGE(&quot;/resource/Apttus__Button_GenerateSupportingDocument&quot;, &quot;Generate Supporting Document&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Generate_Supporting_Document&amp;templateType=Supporting_Document&quot;, IMAGE(&quot;/resource/Apttus__Button_GenerateSupportingDocument&quot;, &quot;Generate Supporting Document&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Supporting Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Generate_Unprotected_Agreement__c</fullName>
        <description>Generates an editable unprotected agreement</description>
        <formula>IF (ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;), HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b50000000lgoN&quot;&amp;&quot;&amp;eid=&quot;&amp;Id, &quot;Generate Agreement&quot;,&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Unprotected (OBSOLETE)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Regenerate_Agreement__c</fullName>
        <description>Conditionally show the &quot;Regenerate&quot; custom button</description>
        <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Filing&quot;)), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Regenerate&quot;, &quot;Regenerate&quot;), &quot;_self&quot;),   HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Regenerate&quot;, &quot;Regenerate&quot;), &quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Regenerate the agreement</inlineHelpText>
        <label>Regenerate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Renew__c</fullName>
        <description>Renew the agreement</description>
        <formula>IF (OR(AND((ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/Apttus__LightningAgreementRenew?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Renew&quot;, &quot;Renew&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/Apttus__AgreementRenew?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Renew&quot;, &quot;Renew&quot;),&quot;_self&quot;)), NULL)</formula>
        <inlineHelpText>Renew the agreement</inlineHelpText>
        <label>Renew</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Return_To_Requestor__c</fullName>
        <description>Return the agreement to the requestor</description>
        <formula>IF ((ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;)), HYPERLINK(&quot;/apex/Apttus__AgreementReturnToRequestor?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_ReturnToRequestor&quot;, &quot;Return To Requestor&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Return the agreement to the requestor</inlineHelpText>
        <label>Return To Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Send_To_Other_Party_For_Review__c</fullName>
        <description>Send agreement for review</description>
        <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;)),IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__LightningSendEmailWizard?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Review&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForReview&quot;, &quot;Send For Review&quot;), &quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus__SendEmail?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Review&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForReview&quot;, &quot;Send For Review&quot;), &quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Send agreement for review</inlineHelpText>
        <label>Send For Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Send_To_Other_Party_For_Signatures__c</fullName>
        <description>Send the agreement for signatures</description>
        <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;)),IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__LightningSendEmailWizard?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Signatures&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForSignatures&quot;, &quot;Send For Signatures&quot;), &quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus__SendEmail?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Signatures&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForSignatures&quot;, &quot;Send For Signatures&quot;), &quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Send the agreement for signatures</inlineHelpText>
        <label>Send For Signatures</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Send_To_Third_Party__c</fullName>
        <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(Apttus__Source__c,&quot;Other Party Paper&quot;))), HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b50000000l7uN&quot;&amp;&quot;&amp;eid=&quot;&amp;Id, &quot;Send To Other Party&quot;, &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send To Other Party (OBSOLETE)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Submit_For_Changes__c</fullName>
        <description>Submit agreement for changes</description>
        <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(Apttus__Source__c,&quot;Other Party Paper&quot;)),(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;))),HYPERLINK(&quot;/apex/Apttus__AgreementSubmitChanges?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_SubmitForChanges&quot;, &quot;Submit For Changes&quot;), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Submit agreement for changes</inlineHelpText>
        <label>Submit For Changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Submit_Request__c</fullName>
        <description>Submit the agreement request</description>
        <formula>IF (AND(ISPICKVAL(Apttus__Status_Category__c,&quot;Request&quot;),OR(ISPICKVAL(Apttus__Status__c,&quot;Request&quot;),ISPICKVAL(Apttus__Status__c,&quot;In Amendment&quot;),ISPICKVAL(Apttus__Status__c,&quot;In Renewal&quot;),ISPICKVAL(Apttus__Status__c,&quot;&quot;))), HYPERLINK(&quot;/apex/Apttus__AgreementSubmitRequest?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_SubmitRequest&quot;, &quot;Submit Request&quot;), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Submit the agreement request</inlineHelpText>
        <label>Submit Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Terminate__c</fullName>
        <description>Terminate the agreement</description>
        <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)))),IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__LightningAgreementTerminate?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Terminate&quot;, &quot;Terminate&quot;),&quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus__AgreementTerminate?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Terminate&quot;, &quot;Terminate&quot;),&quot;_self&quot;)), NULL)</formula>
        <inlineHelpText>Terminate the agreement</inlineHelpText>
        <label>Terminate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_View_Draft_Contract__c</fullName>
        <description>Conditionally show the &quot;Preview&quot; custom button if the contract status is Request</description>
        <formula>IF (ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Preview_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Preview_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Preview the agreement</inlineHelpText>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_View_Final_Contract__c</fullName>
        <description>Conditionally show the &quot;Generate&quot; custom button if the contract status category is &quot;Request&quot;.</description>
        <formula>IF (ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),  HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;) ,  HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Generate the agreement</inlineHelpText>
        <label>Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ImportSupportingDocument__c</fullName>
        <formula>IF ((Apttus__VersionAware__c ), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/Apttus__LightningOfflineDocumentImport?action=ImportSupportingDocument&amp;id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus__Button_ImportSupportingDocument&quot;, &quot;Import Supporting Document&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/Apttus__OfflineDocumentImport?action=ImportSupportingDocument&amp;id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus__Button_ImportSupportingDocument&quot;, &quot;Import Supporting Document&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Supporting Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Import_Offline_Document__c</fullName>
        <description>Conditionally show the &quot;Import Document&quot; custom link if the status category is not &quot;In Effect&quot; or &quot;Expired&quot; or &quot;Terminated&quot; or &quot;Amended&quot; or &quot;Cancelled&quot; or &quot;Import&quot;</description>
        <formula>IF (NOT(OR(ISPICKVAL(Apttus__Status_Category__c, &quot;In Effect&quot;), ISPICKVAL(Apttus__Status_Category__c, &quot;Expired&quot;),ISPICKVAL(Apttus__Status_Category__c, &quot;Terminated&quot;),ISPICKVAL(Apttus__Status_Category__c, &quot;Amended&quot;),ISPICKVAL(Apttus__Status_Category__c, &quot;Cancelled&quot;),ISPICKVAL(Apttus__Status_Category__c, &quot;Import&quot;))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/Apttus__LightningOfflineDocumentImport?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus__Button_ImportOfflineDocument&quot;, &quot;Import Offline Document&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/Apttus__OfflineDocumentImport?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus__Button_ImportOfflineDocument&quot;, &quot;Import Offline Document&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Offline Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__InitiateTermination__c</fullName>
        <description>Conditionally show the &quot;Initiate Termination&quot; custom button.</description>
        <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Terminated&quot;)))),HYPERLINK(&quot;/apex/Apttus__AgreementTerminationInitiate?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_InitiateTermination&quot;, &quot;Initiate Termination&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiate Termination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Initiation_Type__c</fullName>
        <description>To indicate whether this record is being filed as an executed agreement or is being negotiated in the system</description>
        <label>Initiation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiate Contract</fullName>
                    <default>true</default>
                    <label>Negotiate Contract</label>
                </value>
                <value>
                    <fullName>Store Executed Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Internal_Renewal_Notification_Days__c</fullName>
        <description>Notification period prior to Renewal Notice Date when notification is sent out internally that renewal is approaching</description>
        <label>Internal Renewal Notification Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Internal_Renewal_Start_Date__c</fullName>
        <description>Date by which internal notice of internal renewal is approaching – Issue Renewal Notice Date less internal renewal notification days</description>
        <formula>Apttus__Renewal_Notice_Date__c  -   Apttus__Internal_Renewal_Notification_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Renewal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__IsInternalReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates internal review was initiated</description>
        <label>Is Internal Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the agreement is locked for editing</description>
        <inlineHelpText>Indicates whether the agreement is locked for editing</inlineHelpText>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Is_System_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a system initiated updated. An update is triggered by the system during various lifecycle actions such as clone, amend, renew etc. The flag is set before the update and is reset when the update is initiated by a user.</description>
        <inlineHelpText>Indicates a system initiated update.</inlineHelpText>
        <label>Is System Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__LatestDocId__c</fullName>
        <description>ID of the latest document version</description>
        <label>Latest Doc ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Non_Standard_Legal_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate whether this agreement contains non-standard language</description>
        <label>Non Standard Legal Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Returned_Date__c</fullName>
        <description>Date other party returned signed agreement</description>
        <label>Other Party Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Sent_Date__c</fullName>
        <description>Date agreement was sent to other party for signatures</description>
        <label>Other Party Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Signed_By_Unlisted__c</fullName>
        <description>Identifies other party signed by person that is not listed as a contact in salesforce</description>
        <label>Other Party Signed By (Unlisted)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to contact record to identify external signatory</description>
        <label>Other Party Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N50000001Xl0MEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Signed_Date__c</fullName>
        <description>Date when external signatory signed</description>
        <label>Other Party Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Signed_Title__c</fullName>
        <description>Title of person signing on bahalf of Other Party</description>
        <label>Other Party Signed Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Outstanding_Days__c</fullName>
        <description>Number of days between date agreement was today, if not returned as yet.  Esle number of days between returned and sent.</description>
        <formula>IF(ISNULL(  Apttus__Other_Party_Returned_Date__c ), TODAY () -   Apttus__Other_Party_Sent_Date__c ,   Apttus__Other_Party_Returned_Date__c   -   Apttus__Other_Party_Sent_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Owner_Expiration_Notice__c</fullName>
        <description>To indicate the number of days prior to expiration date that a notification needs to be sent to the owner</description>
        <label>Owner Expiration Notice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>45 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                    <default>true</default>
                    <label>90 Days</label>
                </value>
                <value>
                    <fullName>120 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Parent_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Child Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Perpetual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether agreement has an end date specified</description>
        <label>Perpetual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements (Primary Contact)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N50000001Xl0FEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Remaining_Contracted_Days__c</fullName>
        <description>If the agreement is In Effect, this value is calculated as Contract Duration Days less Contracted Days</description>
        <formula>IF(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;), (Apttus__Contract_Duration_Days__c &gt; 0), (Apttus__Contracted_Days__c &gt; 0)), (Apttus__Contract_Duration_Days__c - Apttus__Contracted_Days__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Contracted Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Renewal_Notice_Date__c</fullName>
        <description>Issue Renewal Notice Date = End Date - Renewal Notice Days</description>
        <formula>IF( NOT( ISNULL( Apttus__Contract_End_Date__c ) ) , Apttus__Contract_End_Date__c  -  Apttus__Renewal_Notice_Days__c  , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Renewal_Notice_Days__c</fullName>
        <description>The number of days before end date when renewal notice is due</description>
        <label>Renewal Notice Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Request_Date__c</fullName>
        <description>The date the agreement was requested</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__RetentionDate__c</fullName>
        <description>Date until to retain the record</description>
        <label>Retention Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__RetentionPolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated retention policy</description>
        <label>Retention Policy</label>
        <referenceTo>Apttus__RetentionPolicy__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ReviewOfflineDocument__c</fullName>
        <formula>IF (ISPICKVAL(Apttus__Status_Category__c, &quot;Import&quot;), HYPERLINK(&quot;/apex/Apttus__ReviewOfflineAgreement?id=&quot; &amp;Id &amp;&quot;&amp;name=&quot; &amp;Name, IMAGE(&quot;/resource/Apttus__Button_ReviewOffline&quot;, &quot;Review Offline Document&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Offline Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Risk_Rating__c</fullName>
        <description>This field allows users to track agreement risk rating</description>
        <label>Risk Rating</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>